# horizon

./: .gitignore  README.md  index.html  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
src/: app.tsx  index.css  index.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/0_create_file/: up.sql
src-tauri/migrations/0_create_library/: down.sql  up.sql
src-tauri/migrations/1_create_queue/: up.sql
src-tauri/migrations/9_create_queue/: up.sql
src-tauri/migrations/create_library/: up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: decode.rs  mod.rs  output.rs  thread.rs  utils.rs
src-tauri/src/audio/discover/: file.rs  files.rs  mod.rs
src-tauri/src/audio/play/: command.rs  file.rs  mod.rs  queue.rs
src-tauri/src/audio/queue/: mod.rs
src-tauri/src/audio/source/: file.rs  mod.rs
src-tauri/src/audio/tracks/: mod.rs
src-tauri/src/commands/: audio.rs  mod.rs  utils.rs
src-tauri/src/database/: insert.rs  library.rs  mod.rs  models.rs  schema.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/components/: theme-switcher.tsx  theme-toggle.tsx
src/components/app/: library-bar.tsx  window-bar.tsx
src/components/player/: context.tsx  controls.tsx
src/components/ui/: button.tsx  scroll-area.tsx
src/components/window/: bar.tsx
src/context/: audio.tsx  settings.tsx  theme.tsx
src/lib/: lastfm.ts
src/pages/: index.tsx  setup.tsx
src/pages/index/: error.tsx  page.tsx
src/routes/: index.tsx  library.tsx
src/types/: Status.ts  Track.ts
src/ui/: button.tsx  input.tsx
