[package]
name = "horizon"
version = "0.0.3"
description = "A stupidly simple music app."
authors = ["tygerxqt", "NyanSpaghetti"]
license = "GPL-3.0-only"
repository = "https://github.com/lofustudio/horizon"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.6", features = [] }

[dependencies]
tauri = { version = "=2.0.0-alpha.10", features = [] }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
diesel = { version = "2.1.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17.1"
lofty = "0.14.0"
walkdir = "2.3.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "horizonlib"
crate-type = ["staticlib", "cdylib", "rlib"]
