[package]
name = "horizon"
version = "0.0.0"
description = "A stupidly simple, multi-platform music app."
authors = ["tygerxqt", "NyanSpaghetti", "lofustudio"]
license = "GPL-3.0"
repository = "https://github.com/lofustudio/horizon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
dirs = "5.0.1"
rtrb = "0.3.0"
cpal = "0.15.2"
anyhow = "1.0.79"
time = "0.3.31"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
